k8s-configs/monitoring/uptime-kuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uptime.home.jasongodson.com`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 80
